# ArtixDuo

./: README.md
ArtixDuo DSN Files/: Architecture Diagram.drawio  Architecture.SchDoc  ArtixDuo.OutJob  ArtixDuo.PrjPcb  ArtixDuo.PrjPcbStructure  Aux PSU.SchDoc  Drills.Cam  FPGA1 PMOD Buffers.SchDoc  FPGA_0.SchDoc  FPGA_1.SchDoc  HYPERRAM.SchDoc  High Speed User IO.SchDoc  PCB1.REP  PMU.SchDoc  RP2040 MCU.SchDoc  SMC.SchDoc  Top.SchDoc  USB JTAG.SchDoc  User IO Buffers.SchDoc  User IO.SchDoc
Datasheets/Xilinx Datasheets/xmp277-7series-schematic-review-recommendations/: 7_Series_Schematic_Review_Recommendations.xlsm  readme.txt
SMC_Firmware/: CMakeLists.txt  main.c
